--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,47 +1,47 @@
 ---
-rails.png: rails.png
-rails/index.png: rails.png
-active_admin.js: active_admin.js
-active_admin/index.js: active_admin.js
-application.js: application.js
-application/index.js: application.js
-active_admin.css: active_admin.css
-active_admin/index.css: active_admin.css
-application.css: application.css
-application/index.css: application.css
-active_admin/admin_notes_icon.png: active_admin/admin_notes_icon.png
-active_admin/admin_notes_icon/index.png: active_admin/admin_notes_icon.png
-active_admin/datepicker/datepicker-header-bg.png: active_admin/datepicker/datepicker-header-bg.png
-active_admin/datepicker/datepicker-header-bg/index.png: active_admin/datepicker/datepicker-header-bg.png
-active_admin/datepicker/datepicker-input-icon.png: active_admin/datepicker/datepicker-input-icon.png
-active_admin/datepicker/datepicker-input-icon/index.png: active_admin/datepicker/datepicker-input-icon.png
-active_admin/datepicker/datepicker-next-link-icon.png: active_admin/datepicker/datepicker-next-link-icon.png
-active_admin/datepicker/datepicker-next-link-icon/index.png: active_admin/datepicker/datepicker-next-link-icon.png
-active_admin/datepicker/datepicker-nipple.png: active_admin/datepicker/datepicker-nipple.png
-active_admin/datepicker/datepicker-nipple/index.png: active_admin/datepicker/datepicker-nipple.png
-active_admin/datepicker/datepicker-prev-link-icon.png: active_admin/datepicker/datepicker-prev-link-icon.png
-active_admin/datepicker/datepicker-prev-link-icon/index.png: active_admin/datepicker/datepicker-prev-link-icon.png
-active_admin/index_list_icons/block_icon.svg: active_admin/index_list_icons/block_icon.svg
-active_admin/index_list_icons/block_icon/index.svg: active_admin/index_list_icons/block_icon.svg
-active_admin/index_list_icons/blog_icon.svg: active_admin/index_list_icons/blog_icon.svg
-active_admin/index_list_icons/blog_icon/index.svg: active_admin/index_list_icons/blog_icon.svg
-active_admin/index_list_icons/grid_icon.svg: active_admin/index_list_icons/grid_icon.svg
-active_admin/index_list_icons/grid_icon/index.svg: active_admin/index_list_icons/grid_icon.svg
-active_admin/index_list_icons/table_icon.svg: active_admin/index_list_icons/table_icon.svg
-active_admin/index_list_icons/table_icon/index.svg: active_admin/index_list_icons/table_icon.svg
-active_admin/loading.gif: active_admin/loading.gif
-active_admin/loading/index.gif: active_admin/loading.gif
-active_admin/nested_menu_arrow.gif: active_admin/nested_menu_arrow.gif
-active_admin/nested_menu_arrow/index.gif: active_admin/nested_menu_arrow.gif
-active_admin/nested_menu_arrow_dark.gif: active_admin/nested_menu_arrow_dark.gif
-active_admin/nested_menu_arrow_dark/index.gif: active_admin/nested_menu_arrow_dark.gif
-active_admin/orderable.png: active_admin/orderable.png
-active_admin/orderable/index.png: active_admin/orderable.png
-active_admin/application.js: active_admin/application.js
-active_admin/application/index.js: active_admin/application.js
-active_admin/pages/application.js: active_admin/pages/application.js
-active_admin/pages/application/index.js: active_admin/pages/application.js
-active_admin/print.css: active_admin/print.css
-active_admin/print/index.css: active_admin/print.css
-jquery.min.map: jquery.min.map
-jquery/index.min.map: jquery.min.map
+rails.png: rails-71e944d9b39043eba50b77788c0d767f.png
+rails/index.png: rails-71e944d9b39043eba50b77788c0d767f.png
+active_admin.js: active_admin-1e743714ec912adeeeadf53e5afee353.js
+active_admin/index.js: active_admin-1e743714ec912adeeeadf53e5afee353.js
+application.js: application-ac526ec4a7ce8ee3f44d5d18b939f378.js
+application/index.js: application-ac526ec4a7ce8ee3f44d5d18b939f378.js
+active_admin.css: active_admin-e66927f8fba45b795a8a905312272f5a.css
+active_admin/index.css: active_admin-e66927f8fba45b795a8a905312272f5a.css
+application.css: application-0861886354e522901399f4117792710b.css
+application/index.css: application-0861886354e522901399f4117792710b.css
+active_admin/admin_notes_icon.png: active_admin/admin_notes_icon-8e217933591c9da65796cac884693255.png
+active_admin/admin_notes_icon/index.png: active_admin/admin_notes_icon-8e217933591c9da65796cac884693255.png
+active_admin/datepicker/datepicker-header-bg.png: active_admin/datepicker/datepicker-header-bg-066027d6bdfb64bd6dcc12dd7ce9b6a4.png
+active_admin/datepicker/datepicker-header-bg/index.png: active_admin/datepicker/datepicker-header-bg-066027d6bdfb64bd6dcc12dd7ce9b6a4.png
+active_admin/datepicker/datepicker-input-icon.png: active_admin/datepicker/datepicker-input-icon-b4dd46b47f1361ce12c252d1ad78bcb7.png
+active_admin/datepicker/datepicker-input-icon/index.png: active_admin/datepicker/datepicker-input-icon-b4dd46b47f1361ce12c252d1ad78bcb7.png
+active_admin/datepicker/datepicker-next-link-icon.png: active_admin/datepicker/datepicker-next-link-icon-1807bd114286909b4f6b4c2107ca8476.png
+active_admin/datepicker/datepicker-next-link-icon/index.png: active_admin/datepicker/datepicker-next-link-icon-1807bd114286909b4f6b4c2107ca8476.png
+active_admin/datepicker/datepicker-nipple.png: active_admin/datepicker/datepicker-nipple-6b3a9e9b9a9d9eb7b3648855abcb08ba.png
+active_admin/datepicker/datepicker-nipple/index.png: active_admin/datepicker/datepicker-nipple-6b3a9e9b9a9d9eb7b3648855abcb08ba.png
+active_admin/datepicker/datepicker-prev-link-icon.png: active_admin/datepicker/datepicker-prev-link-icon-3e31e11743a08fb317d48b7e0838356a.png
+active_admin/datepicker/datepicker-prev-link-icon/index.png: active_admin/datepicker/datepicker-prev-link-icon-3e31e11743a08fb317d48b7e0838356a.png
+active_admin/index_list_icons/block_icon.svg: active_admin/index_list_icons/block_icon-15ecde2277ebbdc0afb2136e9d266a0d.svg
+active_admin/index_list_icons/block_icon/index.svg: active_admin/index_list_icons/block_icon-15ecde2277ebbdc0afb2136e9d266a0d.svg
+active_admin/index_list_icons/blog_icon.svg: active_admin/index_list_icons/blog_icon-9b030362aaeb70d5620dda2cdc306fd8.svg
+active_admin/index_list_icons/blog_icon/index.svg: active_admin/index_list_icons/blog_icon-9b030362aaeb70d5620dda2cdc306fd8.svg
+active_admin/index_list_icons/grid_icon.svg: active_admin/index_list_icons/grid_icon-03a80caee92806e52ff525b7a21904b5.svg
+active_admin/index_list_icons/grid_icon/index.svg: active_admin/index_list_icons/grid_icon-03a80caee92806e52ff525b7a21904b5.svg
+active_admin/index_list_icons/table_icon.svg: active_admin/index_list_icons/table_icon-4a36409ed0be224ba8f4907908d089de.svg
+active_admin/index_list_icons/table_icon/index.svg: active_admin/index_list_icons/table_icon-4a36409ed0be224ba8f4907908d089de.svg
+active_admin/loading.gif: active_admin/loading-5132096d71419a66caa453af6ef6cde2.gif
+active_admin/loading/index.gif: active_admin/loading-5132096d71419a66caa453af6ef6cde2.gif
+active_admin/nested_menu_arrow.gif: active_admin/nested_menu_arrow-bf762d23e220f364b4ce3a0a83300f4f.gif
+active_admin/nested_menu_arrow/index.gif: active_admin/nested_menu_arrow-bf762d23e220f364b4ce3a0a83300f4f.gif
+active_admin/nested_menu_arrow_dark.gif: active_admin/nested_menu_arrow_dark-f1e3fcd67fc3076d125581db38d0ca59.gif
+active_admin/nested_menu_arrow_dark/index.gif: active_admin/nested_menu_arrow_dark-f1e3fcd67fc3076d125581db38d0ca59.gif
+active_admin/orderable.png: active_admin/orderable-a47cda5a948c19d31660c7afb9148d95.png
+active_admin/orderable/index.png: active_admin/orderable-a47cda5a948c19d31660c7afb9148d95.png
+active_admin/application.js: active_admin/application-e6c487a6698180ec1b86393e221aad0b.js
+active_admin/application/index.js: active_admin/application-e6c487a6698180ec1b86393e221aad0b.js
+active_admin/pages/application.js: active_admin/pages/application-f49cac6b08a555475c129bd837feb068.js
+active_admin/pages/application/index.js: active_admin/pages/application-f49cac6b08a555475c129bd837feb068.js
+active_admin/print.css: active_admin/print-5d565f016f035fdf7dd6f34668a0a19e.css
+active_admin/print/index.css: active_admin/print-5d565f016f035fdf7dd6f34668a0a19e.css
+jquery.min.map: jquery.min-3e0058db67a6ae8cb4c91596e845aee6.map
+jquery/index.min.map: jquery.min-3e0058db67a6ae8cb4c91596e845aee6.map
