--- a/config/database.yml
+++ b/config/database.yml
@@ -7,7 +7,7 @@ development:
   adapter: postgresql
   database: rblog
   username: postgres
-  password: ninja44
+  password: 
   pool: 5
   timeout: 5000
 
@@ -18,7 +18,7 @@ test:
   adapter: postgresql
   database: rblog
   username: postgres
-  password: ninja44
+  password: 
   pool: 5
   timeout: 5000
 
@@ -26,6 +26,6 @@ production:
   adapter: postgresql
   database: rblog
   username: postgres
-  password: ninja44
+  password: 
   pool: 5
   timeout: 5000
